[package]
name = "quoridor_core"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tbmp = { git = "https://github.com/TheRawMeatball/tbmp" }
#tbmp = { path = "../../tbmp/tbmp" }
serde = { version = "1.0", features = ["derive"] }
bimap = { version = "0.5.2", features = ["serde"] }