[package]
name = "quoridor_gui"
version = "0.1.0"
authors = ["TheRawMeatball <mucit.oguz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quoridor_core = { path = "../quoridor_core" }
quoridor_remote_agent = { path = "../quoridor_remote_agent" }
bevy = { git = "https://github.com/therawmeatball/bevy" }
rand = "0.7.2"