[package]
name = "quoridor_gui"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quoridor_core = { path = "../quoridor_core" }
tbmp = { git = "https://github.com/TheRawMeatball/tbmp" }
#tbmp = { path = "../../tbmp/tbmp" }
bevy = { git = "https://github.com/therawmeatball/bevy" }
rand = "0.7.2"
bimap = { version = "0.5.2", features = ["serde"] }
crossbeam-channel = "0.4.3"
