[package]
name = "quoridor_server"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quoridor_core = { path = "../quoridor_core" }
tbmp = { git = "https://github.com/TheRawMeatball/tbmp" }
#tbmp = { path = "../../tbmp/tbmp" }